--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <header class="header">
       <img src="./avatar.png" alt="avatar" class="header__avatar" />
       <h1 class="header__title">Денис Щербаков</h1>
-      <h3 class="header__subtitle">Тестировщик ПО</h3>
+      <h3 class="header__subtitle">QA Engineer</h3>
+      <p> Тестировщик ПО </p>
     </header>
     <main>
       <section class="links">
